ZON-1392: fix comment-reply-arrow on mobile

--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -64,8 +64,10 @@
         border-left: remify(10px) solid transparent // left arrow slant
         border-right: remify(10px) solid transparent // right arrow slant
         content: ' '
-        margin-left: remify(14px)
+        left: remify(70px)
         position: absolute
+        +respond-min($break-tablet-min)
+            left: remify(34px)
     &:before
         border-bottom-color: $zon_light_grey
         top: remify(-10px)
